<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SimulationFragment">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <AutoCompleteTextView
            android:id="@+id/auto_complete_airport_from"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:hint="@string/label_hint_departure"
            android:dropDownWidth="300dp"
            android:text=""/>

        <Button
            android:id="@+id/btn_clear_airport_from"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="18dp"
            android:background="@drawable/ic_baseline_close_24" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <AutoCompleteTextView
            android:id="@+id/auto_complete_airport_to"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:dropDownWidth="300dp"
            android:hint="@string/label_hint_arrival"
            android:text="" />

        <Button
            android:id="@+id/btn_clear_airport_to"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="18dp"
            android:background="@drawable/ic_baseline_close_24" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_grp_return_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="12dp"
        app:checkedButton="@+id/btn_one_way"
        app:singleSelection="true" >

        <Button
            android:id="@+id/btn_one_way"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/btn_toggle_one_way"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/btn_toggle_return_trip"
            android:textSize="18sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggle_grp_comfort_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        app:checkedButton="@+id/btn_class_economy"
        app:singleSelection="true" >

        <Button
            android:id="@+id/btn_class_economy"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/btn_toggle_economy"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_class_business"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/btn_toggle_business"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_class_comfort"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_weight="1"
            android:text="@string/btn_toggle_comfort"
            android:textSize="18sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/label_distance_flight" />

        <TextView
            android:id="@+id/distance_value_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/default_distance_in_kms" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_compute_footprint"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_calculate_footprint"
        android:textSize="24sp" />

</LinearLayout>